--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -8,3 +8,10 @@ COPY requirements.txt ./
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN wget https://www.sno.phy.queensu.ca/~phil/exiftool/Image-ExifTool-10.61.tar.gz \
+    && tar zfx Image-ExifTool-10.61.tar.gz \
+    && cd Image-ExifTool-10.61 \
+    && perl Makefile.PL \
+    && make install \
+    && rm -fr Image-ExifTool-10.61 
+
