add compose file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,6 @@ COPY prototype/ /usr/src/app
 
 ENV PYTHONPATH /usr/src/app
 
+RUN mkdir -p /usr/src/app/data
+
 CMD [ "python", "api/api_server.py" ]
