--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,5 +2,5 @@ FROM php:apache
 
 COPY . /var/www/html/
 
-RUN rm -fr /var/www/html/Dockerfile /var/www/html/frontend.iml
-
+RUN mkdir -p /var/www/html/data \
+    && rm -fr /var/www/html/Dockerfile /var/www/html/frontend.iml
