--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -5,11 +5,11 @@ MAINTAINER "Jason Jiao <jason.jiao@honeywell.com>"
 WORKDIR /usr/src/app
 
 COPY requirements.txt ./
+COPY 3rd-party/Image-ExifTool-10.61.tar.gz ./
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-RUN wget https://www.sno.phy.queensu.ca/~phil/exiftool/Image-ExifTool-10.61.tar.gz \
-    && tar zfx Image-ExifTool-10.61.tar.gz \
+RUN tar zfx Image-ExifTool-10.61.tar.gz \
     && cd Image-ExifTool-10.61 \
     && perl Makefile.PL \
     && make install \
