--- a/frontend/Dockerfile.base
+++ b/frontend/Dockerfile.base
@@ -7,6 +7,7 @@ RUN apt-get update \
 	               python-dev \
 	               python \
 	               python-pip \
-	&& pip install --no-cache-dir pymongo \
+	&& pip install pymongo \
 	               flask-restful==0.3.6 \
-	&& rm -rf /var/lib/apt/lists/*
+	&& rm -rf /var/lib/apt/lists/* \
+	&& rm -fr ~/.cache/pip
