--- a/frontend/Dockerfile.base
+++ b/frontend/Dockerfile.base
@@ -7,7 +7,7 @@ RUN apt-get update \
 	               python-dev \
 	               python \
 	               python-pip \
-	&& pip install pymongo \
+	&& pip install pymongo==3.1.1 \
 	               flask-restful==0.3.6 \
 	&& rm -rf /var/lib/apt/lists/* \
 	&& rm -fr ~/.cache/pip
