--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [demo]
+HOST = 159.99.234.54
 DB_ROOT = /opt/uav/demo/db
 DATA_ROOT = /opt/uav/demo/data
 PANORAMA = /opt/uav/demo/data/panorama.png
@@ -6,6 +7,7 @@ GSD_PANORAMA = 5.3793
 GSD_IR = 1
 
 [test]
+HOST = 127.0.0.1
 DB_ROOT = /opt/uav/test/db
 DATA_ROOT = /opt/uav/test/data
 PANORAMA = /opt/uav/test/data/panorama.png
