--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,17 @@
 [demo]
 HOST = 159.99.234.54
 DB_ROOT = /opt/uav/demo/db
+APP_DATA = /usr/src/app/data
 DATA_ROOT = /opt/uav/demo/data
-PANORAMA = /opt/uav/demo/data/panorama.png
+PANORAMA = panorama.png
 GSD_PANORAMA = 5.3793
 GSD_IR = 1
 
 [test]
 HOST = 127.0.0.1
 DB_ROOT = /opt/uav/test/db
+APP_DATA = /usr/src/app/data
 DATA_ROOT = /opt/uav/test/data
-PANORAMA = /opt/uav/test/data/panorama.png
+PANORAMA = panorama.png
 GSD_PANORAMA = 5.3793
 GSD_IR = 1
