--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 HOST = 159.99.234.54
 DB_ROOT = /opt/uav/demo/db
 APP_DATA = /usr/src/app/data
+UI_DATA = /var/www/html/data
 DATA_ROOT = /opt/uav/demo/data
 PANORAMA = panorama.png
 GSD_PANORAMA = 5.3793
@@ -11,6 +12,7 @@ GSD_IR = 1
 HOST = 127.0.0.1
 DB_ROOT = /opt/uav/test/db
 APP_DATA = /usr/src/app/data
+UI_DATA = /var/www/html/data
 DATA_ROOT = /opt/uav/test/data
 PANORAMA = panorama.png
 GSD_PANORAMA = 5.3793
