--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,10 @@ HOST = 159.99.234.54
 DB_ROOT = /opt/uav/demo/db
 APP_DATA = /usr/src/app/data
 UI_DATA = /var/www/html/data
+IMAGE_PATH = /var/www/html/img
 DATA_ROOT = /opt/uav/demo/data
-PANORAMA = panorama.png
+PANORAMA = panorama.tif
+UI_MAP = panorama.png
 GSD_PANORAMA = 5.3793
 GSD_IR = 1
 
@@ -13,7 +15,9 @@ HOST = 127.0.0.1
 DB_ROOT = /opt/uav/test/db
 APP_DATA = /usr/src/app/data
 UI_DATA = /var/www/html/data
+IMAGE_PATH = /var/www/html/img
 DATA_ROOT = /opt/uav/test/data
-PANORAMA = panorama.png
+PANORAMA = panorama.tif
+UI_MAP = panorama.png
 GSD_PANORAMA = 5.3793
 GSD_IR = 1
