update gps information

--- a/scripts/docker-compose.template
+++ b/scripts/docker-compose.template
@@ -27,6 +27,9 @@ services:
 		environment:
             - UI_MAP={$UI_DATA}/{$UI_MAP}
 			- IMAGE_PATH={$IMAGE_PATH}
+			- GPS_CENTER={$GPS_CENTER}
+			- GPS_TOP={$GPS_TOP}
+			- GPS_BOTTOM={$GPS_BOTTOM}
         ports:
             - "8090:80"
         links:
