--- a/scripts/docker-compose.template
+++ b/scripts/docker-compose.template
@@ -24,12 +24,12 @@ services:
         image: solarui:latest
         volumes:
             - {$DATA_ROOT}:{$UI_DATA}
-		environment:
+        environment:
             - UI_MAP={$UI_DATA}/{$UI_MAP}
-			- IMAGE_PATH={$IMAGE_PATH}
-			- GPS_CENTER={$GPS_CENTER}
-			- GPS_TOP={$GPS_TOP}
-			- GPS_BOTTOM={$GPS_BOTTOM}
+            - IMAGE_PATH={$IMAGE_PATH}
+            - GPS_CENTER="{$GPS_CENTER}"
+            - GPS_TOP="{$GPS_TOP}"
+            - GPS_BOTTOM="{$GPS_BOTTOM}"
         ports:
             - "8090:80"
         links:
