--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,4 +5,6 @@ MAINTAINER "Jason Jiao <jason.jiao@honeywell.com>"
 COPY . /var/www/html/
 
 RUN mkdir -p /var/www/html/data \
-    && rm -fr /var/www/html/Dockerfile /var/www/html/frontend.iml
+    && rm -fr /var/www/html/Dockerfile /var/www/html/frontend.iml \
+    && mv /var/www/html/docker-php-entrypoint /usr/local/bin
+
