app url path "spi", and php files to wrap the REST API call

--- a/scripts/docker-compose.template
+++ b/scripts/docker-compose.template
@@ -31,8 +31,9 @@ services:
             - GPS_TOP={$GPS_TOP}
             - GPS_BOTTOM={$GPS_BOTTOM}
             - HOST={$HOST}
+            - PORT={$PORT}
         ports:
-            - "8090:80"
+            - "{$PORT}:80"
         links:
             - db:mongo
             - backend:solarapi
