--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [demo]
 HOST = 159.99.234.54
+PORT = 8090
 DB_ROOT = /opt/uav/demo/db
 DATA_ROOT = /opt/uav/demo/data
 PANORAMA = panorama.tif
@@ -7,17 +8,18 @@ UI_MAP = panorama.png
 GSD_PANORAMA = 5.3793
 GSD_IR = 1
 APP_DATA = /usr/src/app/data
-UI_DATA = /var/www/html/data
-IMAGE_PATH = /var/www/html/img
+UI_DATA = /var/www/html/spi/data
+IMAGE_PATH = /var/www/html/spi/img
 
 [test]
 HOST = 127.0.0.1
+PORT = 8090
 DB_ROOT = /opt/uav/test/db
 DATA_ROOT = /opt/uav/test/data
 PANORAMA = panorama.tif
 UI_MAP = panorama.png
-GSD_PANORAMA = 5.3793
-GSD_IR = 1
+GSD_PANORAMA = 1.77
+GSD_IR = 2.83
 APP_DATA = /usr/src/app/data
-UI_DATA = /var/www/html/data
-IMAGE_PATH = /var/www/html/img
+UI_DATA = /var/www/html/spi/data
+IMAGE_PATH = /var/www/html/spi/img
