--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,12 +2,14 @@ FROM solarui:base
 
 MAINTAINER "Jason Jiao <jason.jiao@honeywell.com>"
 
-COPY . /var/www/html/
+RUN mkdir -p /var/www/html/spi
 
-RUN mkdir -p /var/www/html/data \
-    && rm -fr /var/www/html/Dockerfile \
-    && rm -fr /var/www/html/frontend.iml \
-    && rm -fr /var/www/html/Dockerfile.base \
-    && rm -fr /var/www/html/build.sh \
-    && mv /var/www/html/docker-php-entrypoint /usr/local/bin
+COPY . /var/www/html/spi/
+
+RUN mkdir -p /var/www/html/spi/data \
+    && rm -fr /var/www/html/spi/Dockerfile \
+    && rm -fr /var/www/html/spi/frontend.iml \
+    && rm -fr /var/www/html/spi/Dockerfile.base \
+    && rm -fr /var/www/html/spi/build.sh \
+    && mv /var/www/html/spi/docker-php-entrypoint /usr/local/bin
 
