--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,11 @@
-[demo]
-HOST = 159.99.234.54
+[linuo]
+BRAND = linuo
+HOST = 159.99.234.95
 PORT = 8090
-DB_ROOT = /opt/uav/demo/db
-DATA_ROOT = /opt/uav/demo/data
-PANORAMA = panorama.tif
-UI_MAP = panorama.png
-GSD_PANORAMA = 5.3793
-GSD_IR = 1
-APP_DATA = /usr/src/app/data
-UI_DATA = /var/www/html/spi/data
-IMAGE_PATH = /var/www/html/spi/img
+DB_ROOT = /opt/spi/linuo/data/mongo
+DATA_ROOT = /opt/spi/linuo/inspection
+GSD_IR = 0.0056
+TILES = /opt/spi/linuo/tiles
 
 [test]
 HOST = 127.0.0.1
