--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,11 @@
+click==6.7
 flask-restful==0.3.6
 flask_cors==3.0.3
+Flask-HTTPAuth==3.2.3
+Flask-SQLAlchemy==2.2
+itsdangerous==0.24
+passlib==1.7.1
+SQLAlchemy==1.1.11
 matplotlib==2.0.2
 influxdb==4.1.1
 exifread==2.1.2
