expose the port 5000 for solarapi server

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,5 +8,7 @@ ENV PYTHONPATH /usr/src/app
 
 RUN mkdir -p /usr/src/app/data \
     && mkdir -p /usr/src/app/sqlite
+	
+EXPOSE 5000
 
 CMD [ "python", "app/main.py" ]
