remove creating the sqlite folder

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,7 @@ COPY prototype/ /usr/src/app
 
 ENV PYTHONPATH /usr/src/app
 
-RUN mkdir -p /usr/src/app/data \
-    && mkdir -p /usr/src/app/sqlite
+RUN mkdir -p /usr/src/app/data
 	
 EXPOSE 5000
 
