--- a/scripts/docker-compose.template
+++ b/scripts/docker-compose.template
@@ -14,6 +14,7 @@ services:
             - IMG_ROOT=/usr/src/app/data
             - GSD_IR={$GSD_IR}
             - MONGO_HOST=mongo
+			- BRAND={$BRAND}
         links:
             - {$BRAND}_db:mongo
     {$BRAND}_ui:
