correct another bug when no defects are found

--- a/backend/prototype/app/solar.yaml
+++ b/backend/prototype/app/solar.yaml
@@ -282,7 +282,7 @@ paths:
         '200':
           description: success
   '/api/v1/station/{stationId}/date/{date}/analysis':
-    put:
+    post:
       tags:
         - defects
       summary: image analysis trigger
