update config and compose template

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,7 @@ HOST = 159.99.234.95
 PORT = 8090
 DB_ROOT = /opt/spi/linuo/data/mongo
 DATA_ROOT = /opt/spi/linuo/inspection
+SQLITE_ROOT = /opt/spi/linuo/data/sqlite
 GSD_IR = 0.0056
 TILES = /opt/spi/linuo/tiles
 
