update backend to include image width and height

--- a/backend/prototype/spi_app/solar.yaml
+++ b/backend/prototype/spi_app/solar.yaml
@@ -425,6 +425,10 @@ paths:
                   type: number
                 url:
                   type: string
+                width:
+                  type: number
+                height:
+                  type: number
   '/api/v1/station/{stationId}/date/{date}/defect/{defectId}/images/visual':
     get:
       tags:
