update solar swagger temperature api description

--- a/backend/prototype/spi_app/solar.yaml
+++ b/backend/prototype/spi_app/solar.yaml
@@ -543,7 +543,7 @@ paths:
       responses:
         '200':
           description: success
-  '/api/v1/station/{stationId}/date/{date}/image/{image}/temperature/point':
+  '/api/v1/station/{stationId}/date/{date}/image/{image}/temp/point':
     get:
       tags:
         - temperature
@@ -584,7 +584,7 @@ paths:
               temperature:
                 type: number
                 example: 56.1
-  '/api/v1/station/{stationId}/date/{date}/image/{image}/temperature/range':
+  '/api/v1/station/{stationId}/date/{date}/image/{image}/temp/range':
     get:
       tags:
         - temperature
